fix transition problems on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -3620,6 +3620,9 @@ header .hamburger-menu {
   box-shadow: rgba(90, 122, 252, 0.11) 0px 5px 16px 0px;
   transform-origin: right top;
   transition: all 250ms linear, opacity 200ms;
+  -webkit-transition: all 250ms linear, opacity 200ms;
+  -moz-transition: all 250ms linear, opacity 200ms;
+  -o-transition: all 250ms linear, opacity 200ms;
   display: block !important;
   transform: scale(0);
   opacity: 0.3;
@@ -3640,6 +3643,9 @@ header .hamburger-icon {
   position: relative;
   transform: rotate(0deg);
   transition: 0.5s ease-in-out;
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
   cursor: pointer;
   width: 2rem;
   height: 2rem;
@@ -3670,6 +3676,9 @@ header .hamburger-icon span {
   opacity: 1;
   transform: rotate(0deg);
   transition: 0.25s ease-in-out;
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
   left: 50%;
   transform: translateX(-50%);
 }
